--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,7 @@
 {
-  "home_title": "Sat hach lai xe",
-  "welcomeMessage": "Okkkkkkkkkkkk",
+  "home_title": "Sát hạch lái xe",
+  "setting_title": "Thiết lập",
+  "app_version": "Phiên bản ứng dụng: ",
 
   "randomAssestmentTitle": "Đề ngẫu nhiên",
   "assestmentSetsTitle": "Thi theo bộ đề",
@@ -9,5 +10,38 @@
   "signsTitle": "Các biển báo",
   "tipsTitle": "Mẹo ghi nhớ",
   "a60DeadQuestions": "60 câu điểm liệt",
-  "top50WrongQuestions": "Top 50 câu sai"
+  "top50WrongQuestions": "Top 50 câu sai",
+
+  "chooseLicienseType": "Chọn bằng lái xe",
+
+  "a1Title": "Hạng A1",
+  "a1Desc": "Lái xe mô tô hai bánh có dung tích xi-lanh đến 125cm3 hoặc có công suất động cơ điện đến 11kW.",
+  "aTitle": "Hạng A",
+  "aDesc": "Lái xe mô tô hai bánh có dung tích xi-lanh trên 125cm3 hoặc có công suất động cơ điện trên 11kw và lái xe hạng A1.",
+  "b1Title": "Hạng B1",
+  "b1Desc": "Lái xe mô tô ba bánh và lái xe hạng A1.",
+  "bTitle": "Hạng B",
+  "bDesc": "Lái xe ô tô chở người đến 8 chỗ ngồi (không kể chỗ lái xe); xe ô tô tải và chuyên dùng đến 3.500km; xe có kéo rơ moóc đến 750kg.",
+  "c1Title": "Hạng C1",
+  "c1Desc": "Lái xe ô tô tải và chuyên dùng trên 3.500kg đến 7.500kg; xe có kéo rơ moóc đến 750kg; và lái xe hạng B.",
+  "cTitle": "Hạng C",
+  "cDesc": "Lái xe ô tô tải và chuyên dùng trên 7.500kg; xe có kéo rơ moóc đến 750kg; và lái xe hạng B và C1.",
+  "d1Title": "Hạng D1",
+  "d1Desc": "Lái xe ô tô chở người trên 08 chỗ đến 16 chỗ (không kể chỗ lãi xe), xe kéo rơ moóc đến 750kg; và lái xe các hạng B, C1, C.",
+  "d2Title": "Hạng D2",
+  "d2Desc": "Lái xe ô tô chở người (kể cả xe buýt) trên 16 chỗ đến 29 chỗ (không kể chỗ lái xe), xe kéo rơ moóc đến 750kg; và lái xe các hạng B, C1, C, D1.",
+  "dTitle": "Hạng D",
+  "dDesc": "Lái xe ô tô chở người (kể cả xe buýt) trên 29 chỗ (không kể chỗ lái xe); xe giường nằm; xe kéo rơ moóc đến 750kg; và lái xe các hạng B, C1, C, D1, D2.",
+  "beTitle": "Hạng BE",
+  "beDesc": "Lãi xe hạng B kéo rơ moóc trên 750kg.",
+  "c1eTitle": "Hạng C1E",
+  "c1eDesc": "Lái xe hạng C1 kéo rơ moóc trên 750kg.",
+  "ceTitle": "Hạng CE",
+  "ceDesc": "Lái xe hạng C kéo rơ moóc trên 750kg, xe ô tô đầu kéo kéo sơ mi rơ moóc.",
+  "deTitle": "Hạng DE",
+  "deDesc": "Lái xe hạng D kéo rơ moóc trên 750kg; xe ô tô chở khách nối toa.",
+  "d1eTitle": "Hạng D1E",
+  "d1eDesc": "Lái xe hạng D1 kéo rơ moóc trên 750kg.",
+  "d2eTitle": "Hạng D2E",
+  "d2eDesc": "Lái xe hạng D2 kéo rơ moóc trên 750kg."
 }
