update setting screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "home_title": "Sát hạch lái xe",
-  "setting_title": "Thiết lập",
+  "setting_title": "Chọn bằng lái xe",
   "app_version": "Phiên bản ứng dụng: ",
 
   "randomAssestmentTitle": "Đề ngẫu nhiên",
